Set map width to 100%

--- a/_config.yml
+++ b/_config.yml
@@ -57,8 +57,10 @@ twitter_url:
 google_analytics:
 
 # The following settings are NECESSARY for the Prologue theme to run:
-remote_theme: chrisbobbe/jekyll-theme-prologue
+theme: jekyll-theme-prologue
 collections: [sections]
+
+exclude: ["Gemfile", "Gemfile.lock", "make-site.sh"]
 
 plugins:
   - jekyll-maps
