--- a/_config.yml
+++ b/_config.yml
@@ -31,12 +31,10 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: James and Emma's Wedding
-subtitle: 30th June 2018
-description: >- # this means to ignore newlines until "baseurl:"
-  This is the demo site for a Jekyll theme version of
-  HTML5 UP's sleek, responsive site template Prologue.
+subtitle: Saturday 30th June 2018
+description: Welcome to the website for James and Emma's wedding on Saturday 30th June 2018.
 author: James Harrison
-email: your-email@example.com
+email: 
 avatar: assets/images/avatar.jpg
 
 # You'll want to customize baseurl for your own site:
