Add more content

--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@
 title: James and Emma's Wedding
 subtitle: Saturday 30th June 2018
 description: Welcome to the website for James and Emma's wedding on Saturday 30th June 2018.
-author: James Harrison
+author: James Harrison and Emma Chambers
 email: 
 avatar: assets/images/avatar.jpg
 
