--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ avatar: img/avatar-large.jpg
 
 # You'll want to customize baseurl for your own site:
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://james-and-emma.github.io" # the base hostname & protocol for your site
+url: "https://james-and-emma.github.io" # the base hostname & protocol for your site
 
 # Social settings
 facebook_url:
